# backend/src/main/java/com/borderlessteamwork/sixpeng/domain/integration/dto/response/NotionAuthorizeResponse.java
@@ -1,0 +1,17 @@
+package com.borderlessteamwork.sixpeng.domain.integration.dto.response;
+
+import lombok.Getter;
+
+@Getter
+public class NotionAuthorizeResponse {
+
+    private final String authorizeUrl;
+
+    private NotionAuthorizeResponse(String authorizeUrl) {
+        this.authorizeUrl = authorizeUrl;
+    }
+
+    public static NotionAuthorizeResponse of(String authorizeUrl) {
+        return new NotionAuthorizeResponse(authorizeUrl);
+    }
+}
